<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/driveRegenFragment"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/nav_drive" />
    <item
        android:id="@+id/climateFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_climate" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_profiles" />
    <item
        android:id="@+id/adasFragment"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/nav_adas" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
